src/objects/Site_Profile__c.object
<CustomObject>
    <fields>
        <fullName>cfg_Program_Manager_1_Email__c</fullName>
        <formula>cfg_Program_Manager_1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Manager 1 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_1_Job_Title__c</fullName>
        <formula>cfg_Program_Manager_1__r.Title</formula>
        <label>Program Manager 1 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_1_Name__c</fullName>
        <formula>TEXT( cfg_Program_Manager_1__r.Salutation ) &amp; " " &amp;  cfg_Program_Manager_1__r.FirstName &amp; " " &amp;  cfg_Program_Manager_1__r.LastName</formula>
        <label>Program Manager 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_1_Organization__c</fullName>
        <formula>cfg_Program_Manager_1__r.C4G_Organization__c</formula>
        <label>Program Manager 1 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_1_Phone__c</fullName>
        <formula>cfg_Program_Manager_1__r.Phone</formula>
        <label>Program Manager 1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles</relationshipLabel>
        <relationshipName>Site_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_2_Email__c</fullName>
        <formula>cfg_Program_Manager_2__r.Email</formula>
        <label>Program Manager 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_2_Job_Title__c</fullName>
        <formula>cfg_Program_Manager_2__r.Title</formula>
        <label>Program Manager 2 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_2_Name__c</fullName>
        <formula>TEXT( cfg_Program_Manager_2__r.Salutation ) &amp; " " &amp;  cfg_Program_Manager_2__r.FirstName &amp; " " &amp;  cfg_Program_Manager_2__r.LastName</formula>
        <label>Program Manager 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_2_Organization__c</fullName>
        <formula>cfg_Program_Manager_2__r.C4G_Organization__c</formula>
        <label>Program Manager 2 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_2_Phone__c</fullName>
        <formula>cfg_Program_Manager_2__r.Phone</formula>
        <label>Program Manager 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (Program Manager 2)</relationshipLabel>
        <relationshipName>Site_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_3_Email__c</fullName>
        <formula>cfg_Program_Manager_3__r.Email</formula>
        <label>Program Manager 3 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_3_Job_Title__c</fullName>
        <formula>cfg_Program_Manager_3__r.Title</formula>
        <label>Program Manager 3 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_3_Name__c</fullName>
        <formula>TEXT( cfg_Program_Manager_3__r.Salutation ) &amp; " " &amp;  cfg_Program_Manager_3__r.FirstName &amp; " " &amp;  cfg_Program_Manager_3__r.LastName</formula>
        <label>Program Manager 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_3_Organization__c</fullName>
        <formula>cfg_Program_Manager_3__r.C4G_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Manager 3 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_3_Phone__c</fullName>
        <formula>cfg_Program_Manager_3__r.Phone</formula>
        <label>Program Manager 3 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (Program Manager 3)</relationshipLabel>
        <relationshipName>Site_Profiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Reimbursement_Sources__c</fullName>
        <label>Reimbursement Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicaid or the Children’s Health Insurance Program (CHIP)</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
                <value>
                    <fullName>Commercial/private insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above – our practice does not currently receive reimbursement for HealthySteps services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_System_City__c</fullName>
        <label>System City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_Country__c</fullName>
        <label>System Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_Name__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_State__c</fullName>
        <label>System State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_Street__c</fullName>
        <label>System Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_Telephone_Number__c</fullName>
        <label>System Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_Website__c</fullName>
        <label>System Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_System_Zip_Code__c</fullName>
        <label>System Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_of_children_per_Specialist__c</fullName>
        <label># of children per Specialist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Site Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>